[gd_scene load_steps=10 format=3 uid="uid://tdyqmiviik7p"]

[ext_resource type="Script" path="res://Entities/Enemies/enemy_shooter.gd" id="1_u27dl"]
[ext_resource type="PackedScene" uid="uid://cb41npl5akjpq" path="res://Obj/Ammo_pack.tscn" id="2_1fodo"]
[ext_resource type="PackedScene" uid="uid://kahke7himncg" path="res://Obj/Bullet.tscn" id="2_wtj0d"]
[ext_resource type="Texture2D" uid="uid://catcrc5em4klg" path="res://icon.svg" id="3_flm4e"]
[ext_resource type="Script" path="res://Components/Shoot_Component.gd" id="4_svrp1"]
[ext_resource type="Script" path="res://HealthBar.gd" id="6_6vm5d"]
[ext_resource type="Script" path="res://HealthComponent.gd" id="7_8qcx6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k2ltx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bsq5v"]
size = Vector2(123, 126)

[node name="Enemy_shooter" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_u27dl")
AmmoPack = ExtResource("2_1fodo")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.25098, 1, 1)
rotation = -1.5708
texture = ExtResource("3_flm4e")

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(60, -1)
scale = Vector2(0.428711, 0.428711)
texture = ExtResource("3_flm4e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(5.8182, 5.8182)
shape = SubResource("RectangleShape2D_k2ltx")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 1)
shape = SubResource("RectangleShape2D_bsq5v")

[node name="ShootComponent" type="Node2D" parent="."]
position = Vector2(-29.5028, -67.2449)
script = ExtResource("4_svrp1")
bullet_scene = ExtResource("2_wtj0d")
ammo = 250
bullet_dmg = 40
bullet_speed = 20

[node name="BulletSpawnpoint" type="Marker2D" parent="ShootComponent"]
position = Vector2(124.503, 66.2449)

[node name="HealthBarComponent" type="Node2D" parent="."]
position = Vector2(-29.5028, -67.2449)
script = ExtResource("6_6vm5d")

[node name="HealthBar" type="ProgressBar" parent="HealthBarComponent"]
offset_top = -155.0
offset_right = 4.0
offset_bottom = -128.0

[node name="HealthComponent" type="Node2D" parent="."]
position = Vector2(-29.5028, -67.2449)
script = ExtResource("7_8qcx6")
health = 100

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
